@@ -37,6 +37,7 @@ LanguageTool Change Log
 	-LanguageToolListener.languageToolEventOccured() has been renamed to
 	 LanguageToolListener.languageToolEventOccurred()
 	-org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
+	-removed DanishSentenceTokenizer which had been deprecated for three years
 
 -languagetool-wikipedia: the command line options for checking a Wikipedia dump
 	have been simplified. The command can now be called like this:
